--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,11 @@
 \documentclass[12pt]{article}
+\usepackage[margin=1in]{geometry}
 \usepackage{amsmath, amssymb, amsthm}
 \usepackage{comment} 
 \newtheorem{problem}{Problem}
 
 \newif\ifshowsolutions
-\showsolutionsfalse  
+\showsolutionsfalse
 
 \ifshowsolutions
   \newenvironment{solution}{\par\noindent\textbf{Solution:}\itshape}{\par}
@@ -13,10 +14,21 @@
 \fi
   
 \begin{document}
+\begin{flushleft}
+When I was in high school, I never thought about majoring in mathematics. I thought I was more of social science person, but the experience I had in college changed my thoughts. I still remember one incident that I wrote a totally wrong answer to one of the problem sets, but I received a fairly good mark because professor thought the approach to the solution looked novel.\\
+\bigskip
+Ever since then, I liked thinking deeply about a math problem. I stayed late night at Lunt Hall or McCormick building, where I slipped into an empty classroom and wrote down math problems on the blackboard, stared at them for a while to find solution without looking back at solution manual.\\
+\bigskip
+This passion led me to become a math instructor/problem-solving coach at ReachPrep in South Korea. To these days, I still solve high-school competition math problems. Some questions are still hard, and others are not. I am particularly interested in teaching fundamental concepts used in competition math to younger students.\\
+\bigskip
+In October 2024, I read ``Dark Horse" written by Todd Rose. This archive is a project based on ``Dark Horse'' to see how much I progress through with what I like. The level of difficulty for these problems is either early AIME or last seven problems in AMC 10 or 12.\\
+\newpage
 
-\section*{Problem Archive}
+
+\section*{November 2024 Archive}
 
 \input{problems/problem_2024-11-11.tex}
 \input{problems/problem_2024-11-12.tex}
 
+\end{flushleft}
 \end{document}
