--- a/problems/problem_2024-11-13.tex
+++ b/problems/problem_2024-11-13.tex
@@ -38,3 +38,10 @@ Determine the sum of $x$-intercepts of a graph of $f(x)=(x-2)^7-x^7-4$.
 The graphs of two functions $y=(x-2)^7$ and $y=x^7+4$ intersect at two real points. Let $x=r$. then, $x=2-r$ is also the real solution. Hence, the sum of two real $x$-intercepts equals $2$. 
 \end{solution}
 
+\begin{problem}
+Suppose $f(x)=x^3-x+1$ has roots $r$, $s$, and $t$. Determine $\frac{r^3}{r-1}+\frac{s^3}{s-1}+\frac{t^3}{t-1}$.
+\end{problem}
+
+\begin{solution}
+According to Viete's formula, $f(r)=f(s)=f(t)=0$. Hence, $r^3=r-1$, $t^3=t-1$ and $s^3=s-1$. Hence, the answer is $3$.
+\end{solution}
