Updates from Overleaf

--- a/problems/Problem_2024-11-13.tex
+++ b/problems/Problem_2024-11-13.tex
@@ -45,3 +45,11 @@ Suppose $f(x)=x^3-x+1$ has roots $r$, $s$, and $t$. Determine $\frac{r^3}{r-1}+\
 \begin{solution}
 According to Viete's formula, $f(r)=f(s)=f(t)=0$. Hence, $r^3=r-1$, $t^3=t-1$ and $s^3=s-1$. Hence, the answer is $3$.
 \end{solution}
+
+\begin{problem}
+Determine the maximum possible value of $xy$ if $x^2+5xy+y^2=1001$ for real $x$ and $y$.
+\end{problem}
+
+\begin{solution}
+According to AM-GM inequality, $x^2+5xy+y^2\geq 7xy$. Hence, $xy\leq 143$. Check that $x=y=\sqrt{143}$.
+\end{solution}
