Updates from Overleaf

--- a/problems/Problem_2024-11-13.tex
+++ b/problems/Problem_2024-11-13.tex
@@ -53,3 +53,11 @@ Determine the maximum possible value of $xy$ if $x^2+5xy+y^2=1001$ for real $x$ 
 \begin{solution}
 According to AM-GM inequality, $x^2+5xy+y^2\geq 7xy$. Hence, $xy\leq 143$. Check that $x=y=\sqrt{143}$.
 \end{solution}
+
+\begin{problem}
+Determine the sum $\sum_{k=2}^{100}\frac{1}{\binom{k}{2}}$.
+\end{problem}
+
+\begin{solution}
+This telescopes so the sum changes into $2(1-\frac{1}{101})=\frac{200}{101}$.
+\end{solution}
