Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -25,11 +25,10 @@ In October 2024, I read ``Dark Horse" written by Todd Rose. This archive is a pr
 \newpage
 
 
-\section*{November 2024 Archive}
+\section*{November Archive}
 
-\input{problems/Problem_2024-11-11.tex}
-\input{problems/Problem_2024-11-12.tex}
-\input{problems/Problem_2024-11-13.tex}
+\input{problems/November 2024.tex}
+
 
 \end{flushleft}
 \end{document}
