--- a/problems/November 2024.tex
+++ b/problems/November 2024.tex
@@ -1,4 +1,56 @@
 \begin{problem}
+Given a circle centered at $O$, there exists an obtuse triangle $ABC$ inscribed in the circle such that $B$ is obtuse. If $AB=3$ and $BC=8$, and the height from $B$ to $\overline{AC}$ is $2$, find the area of the circle.
+\end{problem}
+
+\begin{solution}
+Let $h$ be the length of the height from $B$ to $\overline{AC}$. Then, by similarity, $AB:h=2R:BC$. Hence, $AB(BC)=h(2R)$. Thus, $24=4R$. The radius is $4$, so the area of the circle equals $16\pi$.
+\end{solution}
+
+\begin{problem}
+Determine the remainder when $3^{15}+5^{15}$ is divided by $17$. 
+\end{problem}
+
+\begin{solution}
+According to Fermat's Little Theorem, $3^{16}\equiv 5^{16} \equiv 1 \pmod{17}$.
+\begin{align*}
+    3^{15}+5^{15} & \equiv \frac13+\frac15 \pmod{17}\\
+    & \equiv \frac{18}{3}+\frac{35}{5} \pmod{17}\\
+    & \equiv 6+7 \pmod{17}\\
+    & \equiv 13 \pmod{17}
+\end{align*}
+\end{solution}
+
+\begin{problem}
+Given positive real numbers $a$, $b$, $c$, and $d$, if $(a+c)(b+d)=121$, determine the least value of $a+b+c+d$.
+\end{problem}
+
+\begin{solution}
+According to AM-GM inequality, 
+\begin{align*}
+    \dfrac{(a+c)+(b+d)}{2} & \geq \sqrt{(a+c)(b+d)}\\
+    \dfrac{a+b+c+d}{2} & \geq \sqrt{121}\\
+    a+b+c+d &\geq 2(11)\\
+    &\geq 22
+\end{align*}
+\end{solution}
+
+\begin{problem}
+Given three positive integers $a>b>c\geq1$, let $N$ be the number of triples $(a,b,c)$ such that $a+b+c=331$. Find the last three digits of $N$.
+\end{problem}
+
+\begin{solution}
+Stars-and-bars imply that the total number of triples without condition equals $\binom{333}{2}$. Assume that $a=b>c$. Then, $2a+c=331$. Diophantine equation shows $166$ triples. Arrange $166$ triples by $\frac{3!}{2!}=3$ ways. Hence, subtract $498$ from $55278$ to retrieve $54780$. The answer is $780$.
+\end{solution}
+
+\begin{problem}
+Compute the number of sequences that are arrangements of the numbers $1$, $2$, $3$, $4$, and $5$ and satisfy the requirement that no term in the sequence is larger than or equal to the square of the next term.
+\end{problem}
+
+\begin{solution}
+First, $1$ should stay in the front of the sequence. Notice that $1<2^2$, $3<2^2$ and $4=2^2$. Hence, we only allow $12$ or $32$ as two consecutive terms in the sequence. Arrange $3$, $4$, and $5$, in $3!(=6)$ ways. Then, place $2$ next to either $1$ or $3$, in $2!(=2)$ ways. Therefore, there are $12$ sequences satisfying the given condition.
+\end{solution}
+
+\begin{problem}
 Determine the number of ordered pairs of positive integers $(a,b)$ such that $a^b=3^{3^3}$.
 \end{problem}
 
@@ -61,3 +113,4 @@ Determine the sum $\sum_{k=2}^{100}\frac{1}{\binom{k}{2}}$.
 \begin{solution}
 This telescopes so the sum changes into $2(1-\frac{1}{101})=\frac{200}{101}$.
 \end{solution}
+
