Updates from Overleaf

--- a/problems/November 2024.tex
+++ b/problems/November 2024.tex
@@ -114,3 +114,18 @@ Determine the sum $\sum_{k=2}^{100}\frac{1}{\binom{k}{2}}$.
 This telescopes so the sum changes into $2(1-\frac{1}{101})=\frac{200}{101}$.
 \end{solution}
 
+\begin{problem}
+There are three rows with three seats each. If Mary, May and Mo wish to sit down, in how many ways can they be seated in different rows and different columns?
+\end{problem}
+
+\begin{solution}
+It is pretty much simple. The answer is $9\times4\times1=36$.
+\end{solution}
+
+\begin{problem}
+In how many ways can four $($'s and $)$'s be arranged in a line such that $)$ must be written after $($?
+\end{problem}
+
+\begin{solution}
+This is a typical Catalan number problem for $4\times4$. Hence, there are $\frac{1}{5}\binom{8}{4}=14$.
+\end{solution}
