Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -15,13 +15,13 @@
   
 \begin{document}
 \begin{flushleft}
-When I was in high school, I never thought about majoring in mathematics. I thought I was more of social science person, but the experience I had in college changed my thoughts. I still remember one incident that I wrote a totally wrong answer to one of the problem sets, but I received a fairly good mark because professor thought the approach to the solution looked novel.\\
+In high school, I never imagined majoring in mathematics. I saw myself as more inclined toward social sciences. However, my perspective shifted dramatically during college. I still vividly recall a moment when I submitted a completely incorrect solution to a problem set but received a surprisingly high grade because my professor found my approach intriguingly novel.\\
 \bigskip
-Ever since then, I liked thinking deeply about a math problem. I stayed late night at Lunt Hall or McCormick building, where I slipped into an empty classroom and wrote down math problems on the blackboard, stared at them for a while to find solution without looking back at solution manual.\\
+That experience sparked a deep interest in mathematics. I grew to love the process of grappling with challenging problems, often staying late at Lunt Hall or the McCormick Building. I would slip into empty classrooms, scribble problems on the blackboard, and immerse myself in finding solutions without consulting a manual.\\
 \bigskip
-This passion led me to become a math instructor/problem-solving coach at ReachPrep in South Korea. To these days, I still solve high-school competition math problems. Some questions are still hard, and others are not. I am particularly interested in teaching fundamental concepts used in competition math to younger students.\\
+This passion eventually led me to a career as a math instructor and problem-solving coach at ReachPrep in South Korea. To this day, I continue solving high school competition math problems. Some are still formidable, while others are less so. My primary interest lies in teaching the foundational concepts of competition math to younger students, helping them develop strong problem-solving skills.\\
 \bigskip
-In October 2024, I read ``Dark Horse" written by Todd Rose. This archive is a project based on ``Dark Horse'' to see how much I progress through with what I like. The level of difficulty for these problems is either early AIME or last seven problems in AMC 10 or 12.\\
+In October 2024, I came across Dark Horse by Todd Rose, which deeply resonated with me. This project is inspired by Dark Horse and serves as a personal archive to track my progress as I pursue what I love. The problems featured here range from early AIME-level difficulty to the final seven questions of the AMC 10 or 12.\\
 \newpage
 
 
