Updates from Overleaf

--- a/problems/November 2024.tex
+++ b/problems/November 2024.tex
@@ -145,3 +145,11 @@ A polynomial equation $x^3+px^2+12x+q=0$ has integer roots, one of which is $1$.
 \begin{solution}
 According to Viete's formula, let $x^3+px^2+12x+q=(x-1)(x-a)(x-b)$ for two other solutions $a$ and $b$. Then, $(a+1)(b+1)=13$ implies that $(a,b)=(12,0)$, $(0,12)$, $(-14,-2)$ and $(-2,-14)$. Hence, $p=-a-b-1$ is either $15$ or $-13$. The largest possible value is $15$.
 \end{solution}
+
+\begin{problem}
+Let $n$ be the number of degree $5$ polynomials $f(x)$ with non-negative integer coefficients such that $f(1)=10$ and $f(-1)=4$. Find the total possible number of $f(x)$s.
+\end{problem}
+
+\begin{solution}
+Apply stars and bars twice to get $216(=36\times6)$ polynomials of $x$.
+\end{solution}
