Updates from Overleaf

--- a/problems/November 2024.tex
+++ b/problems/November 2024.tex
@@ -1,9 +1,9 @@
 \begin{problem}
-Given a circle centered at $O$, there exists an obtuse triangle $ABC$ inscribed in the circle such that $B$ is obtuse. If $AB=3$ and $BC=8$, and the height from $B$ to $\overline{AC}$ is $2$, find the area of the circle.
+Given a circle centered at $O$, there exists an obtuse triangle $ABC$ inscribed in the circle such that $B$ is obtuse. If $AB=3$ and $BC=8$, and the height from $B$ to $\overline{AC}$ is $2$, the area of the circle can be written as $n\pi$. Find $n$.
 \end{problem}
 
 \begin{solution}
-Let $h$ be the length of the height from $B$ to $\overline{AC}$. Then, by similarity, $AB:h=2R:BC$. Hence, $AB(BC)=h(2R)$. Thus, $24=4R$. The radius is $4$, so the area of the circle equals $16\pi$.
+Let $h$ be the length of the height from $B$ to $\overline{AC}$. Then, by similarity, $AB:h=2R:BC$. Hence, $AB(BC)=h(2R)$. Thus, $24=4R$. The radius is $4$, so the area of the circle equals $16\pi$. The answer is $16$.
 \end{solution}
 
 \begin{problem}
@@ -18,6 +18,7 @@ According to Fermat's Little Theorem, $3^{16}\equiv 5^{16} \equiv 1 \pmod{17}$.
     & \equiv 6+7 \pmod{17}\\
     & \equiv 13 \pmod{17}
 \end{align*}
+The answer is $13$.
 \end{solution}
 
 \begin{problem}
@@ -32,6 +33,7 @@ According to AM-GM inequality,
     a+b+c+d &\geq 2(11)\\
     &\geq 22
 \end{align*}
+The answer is $22$.
 \end{solution}
 
 \begin{problem}
@@ -47,7 +49,7 @@ Compute the number of sequences that are arrangements of the numbers $1$, $2$, $
 \end{problem}
 
 \begin{solution}
-First, $1$ should stay in the front of the sequence. Notice that $1<2^2$, $3<2^2$ and $4=2^2$. Hence, we only allow $12$ or $32$ as two consecutive terms in the sequence. Arrange $3$, $4$, and $5$, in $3!(=6)$ ways. Then, place $2$ next to either $1$ or $3$, in $2!(=2)$ ways. Therefore, there are $12$ sequences satisfying the given condition.
+First, $1$ should stay in the front of the sequence. Notice that $1<2^2$, $3<2^2$ and $4=2^2$. Hence, we only allow $12$ or $32$ as two consecutive terms in the sequence. Arrange $3$, $4$, and $5$, in $3!(=6)$ ways. Then, place $2$ next to either $1$ or $3$, in $2!(=2)$ ways. Therefore, there are $12$ sequences satisfying the given condition. The answer is $12$.
 \end{solution}
 
 \begin{problem}
@@ -55,7 +57,7 @@ Determine the number of ordered pairs of positive integers $(a,b)$ such that $a^
 \end{problem}
 
 \begin{solution}
-Since $3^{3^3}$ is $3^{27}$. there is one-to-one correspondence between the number of divisors of $27$ and $(a,b)$. Hence, there are $4$ pairs of $(a,b)$.
+Since $3^{3^3}$ is $3^{27}$. there is one-to-one correspondence between the number of divisors of $27$ and $(a,b)$. Hence, there are $4$ pairs of $(a,b)$. The answer is $4$.
 \end{solution}
 
 \begin{problem}
@@ -63,15 +65,15 @@ Compute the least positive integer value of $n$ such that $10n$ and $12n$ have t
 \end{problem}
 
 \begin{solution}
-Let $n=2^a3^b5^c$. $10n$ and $12n$ have the equal number of divisors if and only if $(a+2)(b+1)(c+2)=(a+3)(b+2)(c+1)$. The smallest value of $n$ can be retrieved when $a=0$, $b=2$ and $c=0$. Thus, $n=9$.
+Let $n=2^a3^b5^c$. $10n$ and $12n$ have the equal number of divisors if and only if $(a+2)(b+1)(c+2)=(a+3)(b+2)(c+1)$. The smallest value of $n$ can be retrieved when $a=0$, $b=2$ and $c=0$. Thus, the answer is $9$.
 \end{solution}
 
 \begin{problem}
-On the complex plane there are six complex numbers satisfying $z^6=1$. Given that $z$, $z^2$ and $z^3$ form a non-degenerate triangle, determine the ratio between the smallest area and largest area formed by $z$, $z^2$ and $z^3$.
+On the complex plane there are six complex numbers satisfying $z^6=1$. Given that $z$, $z^2$ and $z^3$ form a non-degenerate triangle, the ratio between the smallest area and largest area formed by $z$, $z^2$ and $z^3$ can be written as $\frac{a}{b}$ where $a$ and $b$ are relatively prime integers. Find $a+b$.
 \end{problem}
 
 \begin{solution}
-The smallest area is $\frac{\sqrt{3}}{4}$, whereas the largest area is $\frac{3\sqrt{3}}{4}$. Hence, the ratio equals $\frac{1}{3}$.
+The smallest area is $\frac{\sqrt{3}}{4}$, whereas the largest area is $\frac{3\sqrt{3}}{4}$. Hence, the ratio equals $\frac{1}{3}$. The answre is $4$.
 \end{solution}
 
 \begin{problem}
@@ -79,7 +81,7 @@ Three customers in a grocery store saw there are five apples and four oranges. A
 \end{problem}
 
 \begin{solution}
-There are $315$ number of ways to distribute fruits to these customers. Apply De Morgan's Law and Principle of Inclusion and Exclusion. There are $87$ bad ways such that there is at least one person not buying any fruit. Hence, the answer equals $228(=315-87)$.
+There are $315$ number of ways to distribute fruits to these customers. Apply De Morgan's Law and Principle of Inclusion and Exclusion. There are $87$ bad ways such that there is at least one person not buying any fruit. Hence, the answer is $228$.
 \end{solution}
 
 \begin{problem}
@@ -87,7 +89,7 @@ Determine the sum of $x$-intercepts of a graph of $f(x)=(x-2)^7-x^7-4$.
 \end{problem}
 
 \begin{solution}
-The graphs of two functions $y=(x-2)^7$ and $y=x^7+4$ intersect at two real points. Let $x=r$. then, $x=2-r$ is also the real solution. Hence, the sum of two real $x$-intercepts equals $2$. 
+The graphs of two functions $y=(x-2)^7$ and $y=x^7+4$ intersect at two real points. Let $x=r$. then, $x=2-r$ is also the real solution. Hence, the sum of two real $x$-intercepts equals $2$. The answer is $2$.
 \end{solution}
 
 \begin{problem}
@@ -95,7 +97,7 @@ Suppose $f(x)=x^3-x+1$ has roots $r$, $s$, and $t$. Determine $\frac{r^3}{r-1}+\
 \end{problem}
 
 \begin{solution}
-According to Viete's formula, $f(r)=f(s)=f(t)=0$. Hence, $r^3=r-1$, $t^3=t-1$ and $s^3=s-1$. Hence, the answer is $3$.
+According to Viete's formula, $f(r)=f(s)=f(t)=0$. Hence, $r^3=r-1$, $t^3=t-1$ and $s^3=s-1$. The answer is $3$. 
 \end{solution}
 
 \begin{problem}
@@ -103,15 +105,15 @@ Determine the maximum possible value of $xy$ if $x^2+5xy+y^2=1001$ for real $x$ 
 \end{problem}
 
 \begin{solution}
-According to AM-GM inequality, $x^2+5xy+y^2\geq 7xy$. Hence, $xy\leq 143$. Check that $x=y=\sqrt{143}$.
+According to AM-GM inequality, $x^2+5xy+y^2\geq 7xy$. Hence, $xy\leq 143$. Check that $x=y=\sqrt{143}$. The answer is $143$.
 \end{solution}
 
 \begin{problem}
-Determine the sum $\sum_{k=2}^{100}\frac{1}{\binom{k}{2}}$.
+The sum $\sum_{k=2}^{100}\frac{1}{\binom{k}{2}}$ can be written as $\frac{m}{n}$ where $m$ and $n$ are relatively prime positive integers. Find $m+n$.
 \end{problem}
 
 \begin{solution}
-This telescopes so the sum changes into $2(1-\frac{1}{101})=\frac{200}{101}$.
+This telescopes so the sum changes into $2(1-\frac{1}{101})=\frac{200}{101}$. The answer is $301$.
 \end{solution}
 
 \begin{problem}
@@ -119,7 +121,7 @@ There are three rows with three seats each. If Mary, May and Mo wish to sit down
 \end{problem}
 
 \begin{solution}
-Send Mary, May, and Mo, in that order. The answer is $9\times4\times1=36$.
+Send Mary, May, and Mo, in that order. The answer is $36$.
 \end{solution}
 
 \begin{problem}
@@ -127,7 +129,7 @@ In how many ways can four $($'s and $)$'s be arranged in a line such that $)$ mu
 \end{problem}
 
 \begin{solution}
-This is a typical Catalan number problem for $4\times4$. Hence, there are $\frac{1}{5}\binom{8}{4}=14$.
+This is a typical Catalan number problem for $4\times4$. Hence, there are $\frac{1}{5}\binom{8}{4}=14$. The answer is $14$.
 \end{solution}
 
 \begin{problem}
@@ -135,7 +137,7 @@ Points $P$ and $Q$ lie outside and inside square $AIME$, respectively such that 
 \end{problem}
 
 \begin{solution}
-Apply Pythagorean Theorem to conclude that $PI=12\sqrt{2}$ and $AP=1$, so $AI=17$. Hence, $AI^2=289=[AIME]$.
+Apply Pythagorean Theorem to conclude that $PI=12\sqrt{2}$ and $AP=1$, so $AI=17$. Hence, $AI^2=289=[AIME]$. The answer is $289$.
 \end{solution}
 
 \begin{problem}
@@ -143,7 +145,7 @@ A polynomial equation $x^3+px^2+12x+q=0$ has integer roots, one of which is $1$.
 \end{problem}
 
 \begin{solution}
-According to Viete's formula, let $x^3+px^2+12x+q=(x-1)(x-a)(x-b)$ for two other solutions $a$ and $b$. Then, $(a+1)(b+1)=13$ implies that $(a,b)=(12,0)$, $(0,12)$, $(-14,-2)$ and $(-2,-14)$. Hence, $p=-a-b-1$ is either $15$ or $-13$. The largest possible value is $15$.
+According to Viete's formula, let $x^3+px^2+12x+q=(x-1)(x-a)(x-b)$ for two other solutions $a$ and $b$. Then, $(a+1)(b+1)=13$ implies that $(a,b)=(12,0)$, $(0,12)$, $(-14,-2)$ and $(-2,-14)$. Hence, $p=-a-b-1$ is either $15$ or $-13$. The largest possible value is $15$. The answer is $15$.
 \end{solution}
 
 \begin{problem}
@@ -151,5 +153,5 @@ Let $n$ be the number of degree $5$ polynomials $f(x)$ with non-negative integer
 \end{problem}
 
 \begin{solution}
-Apply stars and bars twice to get $216(=36\times6)$ polynomials of $x$.
+Apply stars and bars twice to get $216(=36\times6)$ polynomials of $x$. The answer is $216$.
 \end{solution}
