--- a/problems/November 2024.tex
+++ b/problems/November 2024.tex
@@ -155,3 +155,11 @@ Let $n$ be the number of degree $5$ polynomials $f(x)$ with non-negative integer
 \begin{solution}
 Apply stars and bars twice to get $216(=36\times6)$ polynomials of $x$. The answer is $216$.
 \end{solution}
+
+\begin{problem}
+Eunchan and Joochan made unit cubes, respectively, using magnetic balls and sticks. They decided to use all to make a new right prism, using all of the sticks and balls. They found out each of the faces is regular polygon. Find the volume of the new prism.
+\end{problem}
+
+\begin{problem}
+tan(x) = (4cos
+\end{problem}
