Updates from Overleaf

--- a/problems/November 2024.tex
+++ b/problems/November 2024.tex
@@ -160,6 +160,6 @@ Apply stars and bars twice to get $216(=36\times6)$ polynomials of $x$. The answ
 Eunchan and Joochan made unit cubes, respectively, using magnetic balls and sticks. They decided to use all to make a new right prism, using all of the sticks and balls. They found out each of the faces is regular polygon. Find the volume of the new prism.
 \end{problem}
 
-\begin{problem}
-tan(x) = (4cos
-\end{problem}
+\begin{solution}
+The answer is $0$.
+\end{solution}
