Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -25,9 +25,9 @@ In October 2024, I came across Dark Horse by Todd Rose, which deeply resonated w
 \newpage
 
 
-\section*{November Archive}
+\section*{Competition Math (Intermediate) 1000 Problem Book Project}
 
-\input{problems/November 2024.tex}
+\input{problems/1000Problems.tex}
 
 
 \end{flushleft}
