--- a/problems/1000Problems.tex
+++ b/problems/1000Problems.tex
@@ -157,9 +157,107 @@ Apply stars and bars twice to get $216(=36\times6)$ polynomials of $x$. The answ
 \end{solution}
 
 \begin{problem}
-Eunchan and Joochan made unit cubes, respectively, using magnetic balls and sticks. They decided to use all to make a new right prism, using all of the sticks and balls. They found out each of the faces is regular polygon. Find the volume of the new prism.
+Eunchan and Joochan made unit cubes, respectively, using magnetic balls and sticks. They decided to use all to make a new right prism, using all of the sticks and balls. They found out each of the faces is regular polygon. The volume of the new prism can be written as $a+\sqrt{b}$. Find $a+b$.
 \end{problem}
 
 \begin{solution}
-The answer is $0$.
+This new solid is an octagonal prism. The base area equals $2+2\sqrt{2}$, and the height equals $1$. Hence, the volume equals $2+\sqrt{8}$. The answer is $10$.
+\end{solution}
+
+\begin{problem}
+Three standard, fair six-sided die are rolled at a time. Given that the sum of the values rolled is $12$, the probability that at least two of the shown values is prime can be written as $\frac{m}{n}$ for relatively prime $m$ and $n$. Find $m+n$.
+\end{problem}
+
+
+\begin{solution}
+\begin{align*}
+a+b+c&=12\\
+6+5+1&=12\\ 
+6+4+2&=12\\
+6+3+3&=12\\ 
+5+5+2&=12\\ 
+5+4+3&=12\\ 
+4+4+4&=12
+\end{align*}
+Out of $216$ triples, there are $12$ triples satisfying this property. Hence, $\frac{12}{216}=\frac{2}{36}=\frac{1}{18}$. Hence, the answer is $19$.
+\end{solution}
+
+\begin{problem}
+Determine the remainder when $111,111,111,111$ is divided by $17$.
+\end{problem}
+
+\begin{solution}
+The answer is $7$.
+\end{solution}
+
+\begin{problem}
+If four fair six-sided die are rolled, the probability that the average of four outcomes is $3$ can be written as $\frac{m}{n}$ where $m$ and $n$ are relatively prime positive integers. Determine $m+n$.
+\end{problem}
+
+\begin{solution}
+The answer is $1421$.
+\end{solution}
+
+\begin{problem}
+Given a right isosceles triangle $ABC$ where $AB=BC=3$ and $AC=3\sqrt{2}$, the probability that a point inside the triangle is closer to $AC$ than to either $AB$ or $BC$ can be written as $\sqrt{a}-b$ where $a$ and $b$ are positive integers, and $a$ is a square-free integer. Determine $a+b$.
+\end{problem}
+
+\begin{solution}
+The answer is $3$.
+\end{solution}
+
+\begin{problem}
+Suppose $\overline{AB}$ and $\overline{BC}$ are the chords of the same circle centered at $O$ such that their perpendicular bisectors meet at $O$. If $AB=4$ and $BC=7$, then the area of circle can be written as $\frac{a\pi}{b}$ where $a$ and $b$ are relatively prime positive integers. Determine the value of $ab$.
+\end{problem}
+
+\begin{solution}
+The answer is $260$.
+\end{solution}
+
+\begin{problem}
+If four fair six-sided die are rolled, the probability that the four outcomes, possibly rearranged if necessary, form an arithmetic sequence allowing the common difference of $0$, can be written as a reduced fraction $\frac{m}{n}$ where $m$ and $n$ are relatively prime positive integers. Determine the value of $m$.
+\end{problem}
+
+\begin{solution}
+The answer is $13$.
+\end{solution}
+
+\begin{problem}
+Two circles of different radii are tangent at a point $P$. If an external tangent to two circles meets the internal tangent line passing through $P$ at a point $Q$. Find $PQ^2$ if two radii are $7$ and $3$, respectively.
+\end{problem}
+
+\begin{solution}
+The answer is $21$.
+\end{solution}
+
+\begin{problem}
+Determine the sum of the digits of $111,111,111^2$.
+\end{problem}
+
+\begin{solution}
+The answer is $81$.
+\end{solution}
+
+\begin{problem}
+Given a right triangle with side lengths $6$, $8$, and $10$, if $H$ is the orthocenter, $O$ is the circumcenter, let $P$ be the midpoint of $\overline{OH}$. If $G$ is the centroid of the triangle, then the length of $PG$ can be written as $\frac{m}{n}$ where $m$ and $n$ are relatively prime positive integers. Determine $m+n$.
+\end{problem}
+
+\begin{solution}
+The answer is $11$.
+\end{solution}
+
+\begin{problem}
+Given a quadrilateral $ABCD$ where $AB=8$, $BC=6$, $CD=5\sqrt{2}$ and $AD=5\sqrt{2}$, if $\angle B$ and $\angle D$ are right angles, then $BD$ can be written as $a\sqrt{b}$ where $a$ and $b$ are positive integers, and $b$ is a square-free. Determine $a+b$.
+\end{problem}
+
+\begin{solution}
+The answer is $9$.
+\end{solution}
+
+\begin{problem}
+For a $4$-digit positive integer $n$, if $n^2$ and $n$ has the same remainder when divided by $100$, find the number of all such $n$ satisfying the given condition.
+\end{problem}
+
+\begin{solution}
+The answer is $360$.
 \end{solution}
